完成了个人中心功能开发

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                         个人中心
                     </a>
                     <dl class="layui-nav-child">
-                        <dd><a href="">基本资料</a></dd>
-                        <dd><a href="">更换头像</a></dd>
-                        <dd><a href="">重置密码</a></dd>
+                        <dd><a href="/user/user_info.html" target="fm">基本资料</a></dd>
+                        <dd><a href="/user/user_pwd.html" target="fm">更换头像</a></dd>
+                        <dd><a href="/user/user_avatar.html" target="fm">重置密码</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
@@ -70,13 +70,16 @@
                         <a href="javascript:;"><span class="iconfont icon-user"></span>个人中心</a>
                         <dl class="layui-nav-child">
                             <dd>
-                                <a href="javascript:;"><i class="layui-icon layui-icon-app"></i>基本资料</a>
+                                <a href="user/user_info.html" target="fm"><i
+                                        class="layui-icon layui-icon-app"></i>基本资料</a>
                             </dd>
                             <dd>
-                                <a href="javascript:;"><i class="layui-icon layui-icon-app"></i>更换头像</a>
+                                <a href="user/user_avatar.html" target="fm"><i
+                                        class="layui-icon layui-icon-app"></i>更换头像</a>
                             </dd>
                             <dd>
-                                <a href="javascript:;"><i class="layui-icon layui-icon-app"></i>重置密码</a>
+                                <a href="user/user_pwd.html" target="fm"><i
+                                        class="layui-icon layui-icon-app"></i>重置密码</a>
                             </dd>
                         </dl>
                     </li>
@@ -87,6 +90,7 @@
         <div class="layui-body">
             <!-- 内容主体区域 -->
             <iframe name="fm" src="/home/dashboard.html" frameborder="0"></iframe>
+
         </div>
 
         <div class="layui-footer">
